# anyseq

./: .gitignore  CMakeLists.txt  README.md  abstract  benchmark.sh  install_anydsl.sh  makeall.sh
scripts/data_vector_gen/: generator.py
scripts/hls_postproc/: .gitignore  CMakeLists.txt  align_postproc.cpp  input_example.cpp
sequences/: test1.result  test1a.fna  test1b.fna  test2.result  test2a.fna  test2b.fna  test3.result  test3a.fna  test3b.fna
src/: align.impala  alignment_io.cpp  alignment_io.h  concurrent_queue.cpp  concurrent_queue.impala  concurrent_queue_blocking.h  config.h  config.impala  config_avx.impala  config_cpu.impala  config_fpga.impala  config_gpu.impala  dynamic_matrix.h  dynprog.impala  export.impala  export_hls_global.impala  export_hls_local.impala  export_hls_semiglobal.impala  import.h  indexing.impala  io_error.h  iteration.impala  iteration_acc.impala  iteration_avx.impala  iteration_cpu.impala  iteration_gpu.impala  iteration_hls.impala  limits.impala  main.cpp  mapping_acc.impala  mapping_cpu.impala  mapping_fpga.impala  mapping_fpga_pe_count.impala  mapping_gpu.impala  matrix.impala  predecessors.impala  print.impala  scoring.impala  scoring_acc.impala  scoring_cpu.impala  (+11 more)
src/backend/: backend_amdgpu.impala  backend_avx.impala  backend_cpu.impala  backend_cuda.impala  backend_hls.impala  backend_nvvm.impala  backend_opencl.impala
src/hls/: align_global.h.in  align_local.h.in  align_semiglobal.h.in  postproc.cmake  scheme_global.impala  scheme_local.impala  scheme_semiglobal.impala  tb_global.cpp.in  tb_local.cpp.in  tb_semiglobal.cpp.in  vivado_proj.tcl.in  write_pe_count.cmake
